clang/test/BSC/Negative/Coroutine/Other/await-non-async-call/await-non-async-call.cbs
// RUN: %clang_cc1 -internal-isystem %S/../../../../../../lib/Headers/bsc_include -verify %s 

#include "../../async-func-read-opposite.hbs"

int p(int i) {
  return i;
}

_Async int f() {     
    int a = _Await p(1); // expected-error {{the _Await expression's external function declaration must be modified by _Async or return 'Future' type}}
    int b = _Await read(1);
    return b;
}

int main() {
  return 0;
}